guides/ossm-migration/tempo-stack.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-tempo
