guides/ossm-migration/network-policy-istio-mesh.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-mesh
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          service-mesh: enabled
  podSelector: {}
  policyTypes:
  - Ingress
